<resources>
    <string name="app_name">Tap Shopping</string>
    <string name="title_products">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>
    <string name="content_description">image</string>
    <string name="title_login">USER LOGIN</string>
    <string name="admin_login">MERCHANT LOGIN</string>

    <string name="et_hint_email_id">Email ID</string>

    <string name="et_hint_password">Password</string>

    <string name="lbl_forgot_password">Forget Password</string>

    <string name="btn_lbl_login">Login</string>

    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="first_name">First Name</string>

    <string name="last_name">Last Name</string>

    <string name="confirm_password">Confirm Password</string>


    <string name="i_agree_to_the">I Agree To The Terms<u> &amp;Conditions</u>
</string>

    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>


    <string name="login"><u>LOGIN</u></string>
    <string name="successful_login">You are welcome, Cheers!!</string>

    <string name="forgotpass">Check your mail to reset your password</string>

    <string name="please_wait">Please waitâ€¦</string>

    <string name="title_forgot_password">FORGOT PASSWORD?</string>

    <string name="forgot_password_description">Enter your Email address, You will receive an email to rest your password</string>

    <string name="submit">Submit</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="et_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for the storage. You can allow it from the settings</string>
    <string name="image_selection_failed">Image Selection Failed</string>

    <string name="err_mssge_enter_phone_number"> Please enter your phone number</string>
    <string name="msg_profile_update_success"> Your profile has been Updated Successfully</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_add_product">ADD PRODUCT</string>
    <string name="et_hint_product_category">Product Category</string>
    <string name="et_hint_product_price">Product Price (₦)</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_quantity">Product Quantity</string>
    <string name="btn_lbl_submit">SUBMIT</string>
    <string name="title_product_details">PRODUCT DETAILS</string>

    <string name="lbl_product_description">Product Description</string>

    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>


    <string name="err_msg_select_product_image">Please select product image.</string>

    <string name="err_msg_enter_product_title">Please enter product title.</string>

    <string name="err_msg_enter_product_price">Please enter product price.</string>

    <string name="err_msg_enter_product_description">Please enter product description.</string>

    <string name="err_msg_enter_product_quantity">Please enter product quantity.</string>

    <string name="product_uploaded_success_message">Your product is uploaded successfully.</string>

    <string name="no_products_added_yet">No products added yet!</string>

    <string name="no_dashboard_item_found">No items found!</string>

    <string name="product_delete_success_message">Your product is deleted successfully.</string>

    <string name="delete_dialog_title">Delete</string>

    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>

    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>


    <string name="no_orders_placed_yet">No orders placed yet!</string>

    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>

    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>

    <string name="title_sold_products">Sold Products</string>
    <string name="no_products_sold_out_yet">No products sold out yet!</string>

    <string name="title_sold_product_details">SOLD PRODUCT DETAILS</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="btn_lbl_add_to_cart">ADD TO CART</string>
    <string name="success_message_item_added_to_cart">Product is added to your cart.</string>
    <string name="btn_lbl_go_to_cart">GO TO CART</string>

    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>

    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>

    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>

    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>


    <string name="yes">Yes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sold_products">Sold Products</string>
    <string name="email_sent_success">Email has been sent to your mail</string>
    <string name="et_hint_mobile_number">Enter your mobile number</string>
    <string name="hint_last_name">Enter your last name</string>
    <string name="hint_first_name">Enter your first name</string>
    <string name="err_msg_enter_mobile_number">Enter your mobile number</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="selected_item">Selected item:</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <string name="add_product">Add Product</string>
    <string name="wrist_watches">Wrist Watches</string>
    <string name="unable_to_get_data_from_the_server">Unable to get data from the server</string>
    <string name="image_content_description">image content description</string>
    <string name="description">Description</string>
    <string name="my_cart">My Cart</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="admin">Admin</string>
    <string name="create_admin">Create admin</string>
    <string name="admin_account">Admin Account</string>
    <string name="email">Email</string>
    <string name="required">*Required</string>
    <string name="loading">Loading...</string>
    <string name="retry">Retry</string>
    <string name="okay">Okay</string>
    <string name="get_admin">Get Admin</string>
    <string name="update_admin">Update Admin</string>
    <string-array name="Categories">
        <item>Supermarket</item>
        <item>Health &amp; Beauty</item>
        <item> Phones &amp; Tablets</item>
        <item>Computing</item>
        <item>Electronics</item>
        <item>Fashion</item>
        <item>Baby Products</item>
        <item>Gaming</item>
        <item> Sporting Goods</item>
        <item>Automobile</item>
        <item> Other categories</item>

    </string-array>

    <string name="error_msg_full_name">Please enter full name </string>

    <string name="error_msg_username">Please enter username </string>

    <string name="error_msg_email">Please enter email </string>

    <string name="error_msg_password">Please enter password </string>

    <string name="error_msg_confirm_password">Please confirm password </string>

    <string name="error_msg_agree_terms">Please agree terms and condition </string>

    <string name="error_msg_password_and_confirm_password_mismatch">Password and confirm password does not match </string>

    <string name="registry_successful">Thanks for registering, Cheers!!</string>
    <string name="unable_to_login_user_to_the_server">Unable to login user to the server</string>
    <string name="userName">Username</string>
    <string name="unable_to_register_user_to_the_server">Unable to register user to the server</string>
    <string name="user">User</string>
    <string name="create_user">Create User</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="merchant_login"><u>Merchant Login</u></string>
    <string name="profile">Profile</string>
    <string name="proceed">Proceed</string>
    <string name="product_title">Product Title</string>
    <string name="merchant">Merchant</string>
    <string name="update_admin_info">Update Admin Information</string>
    <string name="product">Product</string>
    <string name="category">Category</string>
    <string name="order">Order</string>
    <string name="new_password">New password</string>
    <string name="update_password">Update Password</string>
    <string name="update">Update</string>
    <string name="category_name">Category name</string>
    <string name="category_description">Category description</string>
    <string name="create_category">Create Category</string>
    <string name="error_msg_category_name">Please input a valid name</string>
    <string name="error_msg_cat_description">Enter a valid description</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="select_product_category">SELECT PRODUCT CATEGORY</string>
    <string name="product_detail">Product detail</string>
    <string name="please_note_selected_images">Please note selected images must meet the minimum requirement of 400px width and 400px height</string>
    <string name="upload_video">Upload Video</string>
    <string name="add_picture_of_your_products">Add picture of your products. You can add a total number of 4 images</string>
    <string name="create_product">Create product</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="enter_product_description">Enter product description</string>
    <string name="product_price">Product price</string>
    <string name="discounted_price">Discounted price</string>
    <string name="quantity">Quantity</string>
    <string name="enter_card_information">ENTER CARD INFORMATION</string>
    <string name="pay_amount">PAY %1$s</string>
    <string name="expiry_slash">%1$s/</string>
    <string name="expiry_space"> %1$s</string>

</resources>